Get default browser app info using x-scheme-handler

https://bugzilla.gnome.org/show_bug.cgi?id=750275